<resources>
    <string name="app_name">Help Us</string>

    <string name="label_settings">Configurações</string>
    <string name="label_name_application">HelpUs!</string>
    <string name="label_name_application_slogan">Ajude sua cidade a ser um lugar melhor</string>
    <string name="label_email">E-mail</string>
    <string name="label_email_sample">email@exemplo.com</string>
    <string name="label_password">Senha</string>
    <string name="label_sign_in">Entrar</string>
    <string name="label_sign_up">Não é cadastrado ainda? <b>Cadastre-se.</b></string>
    <string name="label_first_name">Nome</string>
    <string name="label_first_name_sample">João</string>
    <string name="label_last_name">Sobrenome</string>
    <string name="label_last_name_sample">Da Silva</string>
    <string name="label_register_user">Registrar um novo usuario</string>
    <string name="label_register">Registrar</string>
    <string name="label_invalid_field">* Campo obrigatório</string>
    <string name="label_invalid_name">* Nome inválido</string>
    <string name="label_invalid_last">* Sobrenome inválido</string>
    <string name="label_invalid_email">* E-mail inválido</string>
    <string name="label_invalid_password">* Senha inválida</string>
    <string name="label_save">Salvar</string>
    <string name="label_my_complaints">Minhas reclamações</string>
    <string name="label_informations">Informações</string>
    <string name="label_rate_your_issue">Classifique seu problema</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="title_activity_new_pin">NewPinActivity</string>

</resources>
